feat：转场动画学习

--- a/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/11.悬浮窗开发设计实践.md
@@ -278,7 +278,7 @@
 - LayoutParam的坑！！！！
     - WindowManager的addView方法有两个参数，一个是需要加入的控件对象View，另一个参数是WindowManager.LayoutParam对象。
     - LayoutParam里的type变量。需要注意一个坑！！！！！！这个变量是用来指定窗口类型的。在设置这个变量时，需要对不同版本的Android系统进行适配。
-    ```
+    ``` java
     if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
       layoutParams.type = WindowManager.LayoutParams.TYPE_APPLICATION_OVERLAY;
     } else {
@@ -289,7 +289,7 @@
     - 而Android 8.0对系统和API行为做了修改，包括使用SYSTEM_ALERT_WINDOW权限的应用无法再使用一下窗口类型来在其他应用和窗口上方显示提醒窗口：
     - 如果需要实现在其他应用和窗口上方显示提醒窗口，那么必须该为TYPE_APPLICATION_OVERLAY的新类型。
 - 如果在Android 8.0以上版本仍然使用TYPE_PHONE类型的悬浮窗口，则会出现如下异常信息：
-    ```
+    ``` java
     android.view.WindowManager$BadTokenException: Unable to add window android.view.ViewRootImpl$W@f8ec928 -- permission denied for window type 2002
     ```
 
@@ -307,7 +307,7 @@
 
 
 #### 6.5 异常设计
-- 针对悬浮窗的添加，移除和更新操作需要增加catch操作。那么为何要这样操作。如下所示：
+- 针对悬浮窗的添加，移除和更新操作需要增加catch操作。那么为何要这样操作，模仿吐司。如下所示：
     ```
     try {
         mWindowManager.addView(mDecorView, mWindowParams);
