--- a/Read/ReadMeWiki/01.大型方案/17.App动画通用方案实践.md
+++ b/Read/ReadMeWiki/01.大型方案/17.App动画通用方案实践.md
@@ -10,10 +10,25 @@
     - 2.2 补间动画
     - 2.3 属性动画
     - 2.4 过渡动画
+    - 2.5 属性和补间动画区别
+    - 2.6 其他动画
 - 03.各个动画使用场景
-    - 3.1 使用场景
-    - 3.2 属性和补间动画区别
-
+    - 3.1 帧动画使用场景
+    - 3.2 补间动画场景
+    - 3.3 属性动画场景
+    - 3.4 过渡动画场景
+    - 3.5 其他动画场景
+- 04.动画的设计思想
+    - 4.1 逐帧动画思想
+    - 4.2 补间动画思想
+    - 4.3 属性动画思想
+    - 4.4 过渡动画思想
+- 05.动画的原理分析
+    - 5.1 逐帧动画原理
+    - 5.2 补间动画原理
+    - 5.3 属性动画原理
+    - 5.4 过渡动画原理
+    
 
 
 
@@ -22,8 +37,9 @@
 #### 1.1 项目背景
 
 
-#### 1.2 遇到问题
 
+#### 1.2 遇到问题
+- Android 动画在开发中是不可或缺的功能，或者说是界面灵动的添加剂。那你是否总结过 Android 中总共为开发者提供了多少种方式的动画呢？
 
 
 #### 1.3 基础概念介绍
@@ -37,515 +53,332 @@
 
 ### 02.动画基础介绍
 #### 2.1 逐帧动画
-- 逐帧动画简单，也叫Drawable Animation动画，是最简单最直观动画类型。
-- 逐帧动画XML资源文件方式，在res/drawable目录下新建动画XML文件。
-    - android:oneshot用来控制动画是否循环播放，true表示不会循环播放，false表示会循环播放
-    - android:duration="200"表示每一帧持续播放的时间
-    ``` xml
-    <?xml version="1.0" encoding="utf-8"?>
-    <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
-        android:oneshot="false">
-        <item android:drawable="@mipmap/audio_anim_01" android:duration="200" />
-        <item android:drawable="@mipmap/audio_anim_09" android:duration="200" />
-    </animation-list>
-    ```
-- 逐帧动画代码方式，代码方式用的少，如下所示
-    ``` java
-    AnimationDrawable drawable = new AnimationDrawable();
-    for(int a=0 ; a<9 ; a++){
-        int id = getResources().getIdentifier("audio_anim_0" + a, "mipmap", getPackageName());
-        Drawable da = getResources().getDrawable(id);
-        drawable.addFrame(da,200);
-    }
-    ivVisualEffect.setBackground(drawable);
-    drawable.setOneShot(false);
-    //获取对象实例，用来控制播放与停止
-    AnimationDrawable rocketAnimation = (AnimationDrawable) ivVisualEffect.getBackground();
-    rocketAnimation.start();    // 开启帧动画
-    rocketAnimation.stop();     // 停止动画
-    ```
+- 逐帧动画简单
+    - 也叫Drawable Animation动画，是最简单最直观动画类型。可以把它想像成播放电影，一堆的图片连贯起来，按照顺序播放就成了动画。
+- 逐帧动画实现方式有两种：
+    - 第一种在res/drawable目录下新建动画XML文件；第二种创建AnimationDrawable对象然后将将资源图片添加进来播放即可。
 
 
 
 #### 2.2 补间动画
-- 无需关注每一帧，只需要定义动画开始与结束两个关键帧，并指定动画变化的时间与方式等。
 - 对于 Animation 动画实现机制
     - 实现机制是，在每次进行绘图的时候，通过对整块画布的矩阵进行变换，从而实现一种视图坐标的移动，但实际上其在 View内部真实的坐标位置及其他相关属性始终恒定。
+- 补间动画特点
+    - 无需关注每一帧，只需要定义动画开始与结束两个关键帧，并指定动画变化的时间与方式等。
+- 补间动画实现方式
+    - 第一种，通过xml配置，把文件放到res/anim/目录下，alpha，rotate，scale，translate，set(一个持有其它动画元素的容器)
+    - 第二种，通过代码实现，AlphaAnimation，RotateAnimation，ScaleAnimation，TranslateAnimation，AnimationSet(四种的组合容器管理类)
+- 补间动画使用注意点
+    - 补间动画执行之后并未改变 View 的真实布局属性值。切记这一点，譬如在 Activity 中有一个 Button 在屏幕上方，设置了平移动画移动到屏幕下方然后保持动画最后执行状态呆在屏幕下方，这时如果点击屏幕下方动画执行之后的 Button 是没有任何反应的，而点击原来屏幕上方没有 Button 的地方却响应的是点击Button的事件。
+
 
 
 #### 2.3 属性动画
-- 补间动画增强版本，补间动画存在一些缺点
+- 为何有属性动画的背景。主要是补间动画存在一些缺点
     - a.作用对象局限：View 。即补间动画 只能够作用在视图View上，即只可以对一个Button、TextView、甚至是LinearLayout、或者其它继承自View的组件进行动画操作，但无法对非View的对象进行动画操作
     - b.没有改变View的属性，只是改变视觉效果
-    - c.动画效果单一
+    - c.动画效果单一，无法满足复杂的动画效果
 - 属性动画特点
     - 作用对象：任意 Java 对象，不再局限于 视图View对象
     - 实现的动画效果：可自定义各种动画效果，不再局限于4种基本变换：平移、旋转、缩放 & 透明度
 - 对于 Animator 动画实现机制
     - Animator动画的实现机制说起来其实更加简单一点，因为他其实只是计算动画开启之后，结束之前，到某个时间点得时候，某个属性应该有的值，然后通过回调接口去设置具体值。
     - 其实 Animator 内部并没有针对某个 view 进行刷新，来实现动画的行为，动画的实现是在设置具体值的时候，方法内部自行调取的类似 invalidate 之类的方法实现的。也就是说使用 Animator 内部的属性发生了变化。
-- ValueAnimator与ObjectAnimator区别
-    - ValueAnimator 类是先改变值，然后手动赋值 给对象的属性从而实现动画；是间接对对象属性进行操作；
-    - ObjectAnimator 类是先改变值，然后自动赋值 给对象的属性从而实现动画；是直接对对象属性进行操作；
 
 
 
 #### 2.4 过渡动画
+- 什么是转场动画
+    - Activity 和 Fragment 变换是建立在名叫 Transitions 的安卓新特性之上的。为在不同的 UI 状态之间产生动画效果提供了非常方便的 API。
+    - Transition 可以被用来实现 Activity 或者 Fragment 切换时的异常复杂的动画效果。
+- 转场动画核心概念
+    - 场景（scenes）和变换（transitions）。场景（scenes）定义了当前的 UI 状态；变换（transitions）则定义了在不同场景之间动画变化的过程。
+- 当一个场景改变的时候，transition 主要负责：
+    - （1）捕捉在开始场景和结束场景中每个 View 的状态。（2）根据视图一个场景移动到另一个场景的差异创建一个 Animator。
 
 
 
-### 03.各个动画使用场景
-#### 3.2 属性和补间动画区别
+
+
+#### 2.5 属性和补间动画区别
+- View 动画/视图动画：
+    - View 动画只能为 View 添加动画效果，且不能监听 View 相关属性的变化过程。
+    - View 动画提供的动画能力较为单一，目前只支持帧动画、缩放动画、位移动画、旋转动画、透明度动画以及这些动画的集合动画。
+    - View动画改变的是 View 的绘制效果，View 的真正位置和相关属性并不会改变，这也就造成了点击事件的触发区域是动画前的位置而不是动画后的位置的原因。
+- 属性动画
+    - 属性动画作用对象不局限在 View 上，而是任何提供了 Getter 和 Setter 方法的对象的属性上。
+    - 属性动画没有直接改变 View 状态的能力，而是通过动态改变 View 相关属性的方式来改变 View 的显示效果。
+    - 属性动画使用更方便，可以用更简洁的代码实现相关的动画效果。
+    - 属性动画上手难度较高，对于 propertyName 需要自己去挖掘，或者自己通过 Wrapper 的方式去自定义 propertyName。
 - 效果上区别
     - 属性动画才是真正的实现了view的移动，补间动画对view的移动更像是在不同地方绘制了一个影子，实际对象还是处于原来的地方。当动画的repeatCount设置为无限循环时，如果在Activity退出时没有及时将动画停止，属性动画会导致Activity 无法释放而导致内存泄漏，而补间动画却没问题。xml文件实现的补间动画，复用率极高。在 Activity切换，窗口弹出时等情景中有着很好的效果。
     - 补间动画还有一个致命的缺陷，就是它只是改变了View的显示效果而已，而不会真正去改变View的属性。什么意思呢？比如说，现在屏幕的左上角有一个按钮，然后我们通过补间动画将它移动到了屏幕的右下角，现在你可以去尝试点击一下这个按钮，点击事件是绝对不会触发的，因为实际上这个按钮还是停留在屏幕的左上角，只不过补间动画将这个按钮绘制到了屏幕的右下角而已。
 - 或者更简单一点说
     - 前者属性动画，改变控件属性，（比如平移以后点击有事件触发）
-    - 后者补间动画，只产生动画效果（平移之后点无事件触发，前提是你fillafter=true） 
-
-
-
-##  6.Android动画框架原理解析
-#####  6.1 关于补间动画原理
-- 要了解Android动画是如何加载出来的,我们首先要了解Android View 是如何组织在一起的.每个窗口是一颗View树. RootView是DecorView,在布局文件中声明的布局都是DecorView的子View.是通过setContentView来设置进入窗口内容的. 因为View的布局就是一棵树.所以绘制的时候也是按照树形结构来遍历每个View进行绘制.ViewRoot.java中 draw函数准备好Canvas后 调用 mView.draw(canvas),这里的mView是DecorView.
-- **下面看一下递归绘制的几个步骤:**
-- 1.绘制背景
-- 2.如果需要,保存画布(canvas),为淡入淡出做准备
-- 3.通过调用View.onDraw(canvas)绘制View本身的内容
-- 4.通过 dispatchDraw(canvas)绘制自己的孩子,dispatchDraw->drawChild->child.draw(canvas) 这样的调用过程被用来保证每个子 View 的 draw 函数都被调用
-- 5.如果需要，绘制淡入淡出相关的内容并恢复保存的画布所在的层（layer）
-- 6.绘制修饰的内容（例如滚动条）
-- 当一个 ChildView 要重画时，它会调用其成员函数 invalidate() 函数将通知其 ParentView 这个 ChildView 要重画，这个过程一直向上遍历到 ViewRoot，当 ViewRoot 收到这个通知后就会调用上面提到的 ViewRoot 中的 draw 函数从而完成绘制。
-- Android 动画就是通过 ParentView 来不断调整 ChildView 的画布坐标系来实现的
+    - 后者补间动画，只产生动画效果（平移之后点无事件触发） 
 
 
 
 
-
-#### 2.2 如何计算动画数据
-- 首先进入Animation类，然后找到getTransformation方法，主要是分析这个方法逻辑，如图所示
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-d999c70a98e8b17f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- 那么这个方法中做了什么呢？Animation在其getTransformation函数被调用时会计算一帧动画数据，而上面这些属性基本都是在计算动画数据时有相关的作用。
-- 第一步：若startTime为START_ON_FIRST_FRAME(值为-1)时，将startTime设定为curTime
-- 第二步：计算当前动画进度：
-    - normalizedTime = (curTime - (startTime + startOffset))/duration
-    - 若mFillEnabled==false：将normalisedTime夹逼至[0.0f, 1.0f]
-- 第三步：判断是否需要计算动画数据：
-    - 若normalisedTime在[0.0f, 1.0f]，需计算动画数据
-    - 若normalisedTime不在[0.0f, 1.0f]：
-        - normalisedTime<0.0f, 仅当mFillBefore==true时才计算动画数据
-        - normalisedTime>1.0f, 仅当mFillAfter==true时才计算动画数据
-- 第四步：若需需要计算动画数据：
-    - 若当前为第一帧动画，触发mListener.onAnimationStart
-    - 若mFillEnabled==false：将normalisedTime夹逼至[0.0f, 1.0f]
-    - 根据插间器mInterpolator调整动画进度：
-    - interpolatedTime = mInterpolator.getInterpolation(normalizedTime)
-    - 若动画反转标志位mCycleFlip为true，则
-    - interpolatedTime = 1.0 - normalizedTime
-    - 调用动画更新函数applyTransformation(interpolatedTime, transformation)计算出动画数据
-- 第五步：若夹逼之前normalisedTime大于1.0f, 则判断是否需继续执行动画：
-    - 已执行次数mRepeatCount等于需执行次数mRepeated
-        - 若未触发mListener.onAnimationEnd，则触发之
-    - 已执行次数mRepeatCount不等于需执行次数mRepeated
-        - 自增mRepeatCount
-        - 重置mStartTime为-1
-        - 若mRepeatMode为REVERSE，则取反mCycleFlip
-        - 触发mListener.onAnimationRepeat
-
-
-
-#### 2.3 什么是动画更新函数
-- 下面我们来看一下getTransformation方法中的这一行代码applyTransformation(interpolatedTime, outTransformation)，然后进去看看这个方法。如下所示
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-220a227e0fd51206.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- 这个方法的用途是干啥呢？从这个英文解释中可以得知：getTransform的助手。子类应该实现这一点，以应用给定的内插值来应用它们的转换。该方法的实现应该总是替换指定的转换或文档，而不是这样做的。
-- 都知道Animation是个抽象类，接着我们这些逗比程序员可以看看它的某一个子类，比如看看ScaleAnimation中的applyTransformation方法吧。
-    - 是否设定缩放中心点： 
-        - 若mPivotX==0 且 mPivotY==0：transformation.getMatrix().setScale(sx, sy)
-        - 否则：transformation.getMatrix().setScale(sx, sy, mPivotX, mPivotY)
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-eb1b0b527f74dd92.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- 介绍到这里还是没有讲明白它的具体作用，它是在什么情况下调用的。不要着急，接下来会慢慢分析的……
-
-
-
-#### 2.4 动画数据如何存储
-- 可以看到applyTransformation(float interpolatedTime, Transformation t)这个方法中带有一个Transformation参数，那么这个参数是干啥呢？
-    - 实际上，Animation的动画函数getTransformation目的在于生成当前帧的一个Transformation，这个Transformation采用alpha以及Matrix存储了一帧动画的数据，Transformation包含两种模式：
-        - alpha模式：用于支持透明度动画
-        - matrix模式：用于支持缩放、平移以及旋转动画
-    - 同时，Transformation还提供了许多两个接口用于组合多个Transformation：
-        - compose：前结合（alpha相乘、矩阵右乘、边界叠加）
-        - postCompose：后结合（alpha相乘、矩阵左乘、边界叠加
-
-
-
-#### 2.5 Animation的调用
-- getTransformation这个函数究竟是在哪里调用的？计算得到的动画数据又是怎么被应用的？为什么Animation这个包要放在android.view下面以及Animation完成之后为什么View本身的属性不会被改变。慢慢看……
-    - 要了解Animation，先从要从Animation的基本使用View.startAnimation开始寻根溯源：如下所示
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-a71aeb172fbdb3d2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- 接着看看setStartTime这个方法，主要是设置一些属性。
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-545bd4bfbc357959.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- 接着看看setAnimation(animation)方法源码
-    - 设置要为此视图播放的下一个动画。如果希望动画立即播放，请使用{@link#startAnimation(android.view.animation.Animation)}代替此方法，该方法允许对启动时间和无效时间进行细粒度控制，但必须确保动画具有启动时间集，并且当动画应该启动时，视图的父视图(控制子视图上的动画)将失效。
+#### 2.6 其他动画
+- 触摸反馈动画
+    - Ripple 波纹效果有两种。使用也非常简单，只要将上面两种效果设置为控件的背景或者前景就好了，同时需要给控件设置点击事件、或把控件设置为可点击 android:clickable="true"
     ```
-    public void setAnimation(Animation animation) {
-        mCurrentAnimation = animation;
-        if (animation != null) {
-            if (mAttachInfo != null && mAttachInfo.mDisplayState == Display.STATE_OFF
-                    && animation.getStartTime() == Animation.START_ON_FIRST_FRAME) {
-                animation.setStartTime(AnimationUtils.currentAnimationTimeMillis());
-            }
-            animation.reset();
-        }
-    }
+    //有边界
+    ?android:attr/selectableItemBackground
+    //无边界 （要求API21以上）
+    ?android:attr/selectableItemBackgroundBorderless 
     ```
-- 接着重点看一下invalidate(true)这个方法
-    - 通过invalidate(true)函数会触发View的重新绘制，那么在View.draw是怎么走到对Animation的处理函数呢？
-    ```
-    View.draw(Canvas)
-    —> ViewGroup.dispatchDraw(Canvas)
-    —> ViewGroup.drawChild(Canvas, View, long)
-    —> View.draw(Canvas, ViewGroup, long)
-    —> View.applyLegacyAnimation(ViewGroup, long, Animation, boolean)
-    ```
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-29e13cbca350f60a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- 接着看看View中applyLegacyAnimation这个方法
-    ```
-    private boolean applyLegacyAnimation(ViewGroup parent, long drawingTime,
-            Animation a, boolean scalingRequired) {
-        Transformation invalidationTransform;
-        final int flags = parent.mGroupFlags;
-        //判断Animation是否初始化
-        final boolean initialized = a.isInitialized();
-        //如果没有初始化，则进行初始化
-        if (!initialized) {
-            a.initialize(mRight - mLeft, mBottom - mTop, parent.getWidth(), parent.getHeight());
-            a.initializeInvalidateRegion(0, 0, mRight - mLeft, mBottom - mTop);
-            if (mAttachInfo != null) a.setListenerHandler(mAttachInfo.mHandler);
-            //由父视图组调用，通知当前与此视图关联的动画的开始。如果重写此方法，则始终调用Super.on动画Start()；
-            onAnimationStart();
-        }
-    
-        //获取Transformation对象
-        final Transformation t = parent.getChildTransformation();
-        //获取要在指定时间点应用的转换，这个方法最终调用了Animation中的getTransformation方法
-        //调用getTransformation根据当前绘制事件生成Animation中对应帧的动画数据
-        boolean more = a.getTransformation(drawingTime, t, 1f);
-        if (scalingRequired && mAttachInfo.mApplicationScale != 1f) {
-            if (parent.mInvalidationTransformation == null) {
-                parent.mInvalidationTransformation = new Transformation();
-            }
-            invalidationTransform = parent.mInvalidationTransformation;
-            a.getTransformation(drawingTime, invalidationTransform, 1f);
-        } else {
-            invalidationTransform = t;
-        }
-    
-        //下面主要是，根据动画数据设定重绘制区域
-        if (more) {
-            if (!a.willChangeBounds()) {
-                if ((flags & (ViewGroup.FLAG_OPTIMIZE_INVALIDATE | ViewGroup.FLAG_ANIMATION_DONE)) ==
-                        ViewGroup.FLAG_OPTIMIZE_INVALIDATE) {
-                    parent.mGroupFlags |= ViewGroup.FLAG_INVALIDATE_REQUIRED;
-                } else if ((flags & ViewGroup.FLAG_INVALIDATE_REQUIRED) == 0) {
-                    parent.mPrivateFlags |= PFLAG_DRAW_ANIMATION;
-                    //调用ViewGroup.invalidate(int l, int t, int r, int b)设定绘制区域
-                    parent.invalidate(mLeft, mTop, mRight, mBottom);
-                }
-            } else {
-                if (parent.mInvalidateRegion == null) {
-                    parent.mInvalidateRegion = new RectF();
-                }
-                final RectF region = parent.mInvalidateRegion;
-                a.getInvalidateRegion(0, 0, mRight - mLeft, mBottom - mTop, region,
-                        invalidationTransform);
-                parent.mPrivateFlags |= PFLAG_DRAW_ANIMATION;
-    
-                final int left = mLeft + (int) region.left;
-                final int top = mTop + (int) region.top;
-                
-                //调用ViewGroup.invalidate(int l, int t, int r, int b)设定绘制区域
-                parent.invalidate(left, top, left + (int) (region.width() + .5f),
-                        top + (int) (region.height() + .5f));
-            }
-        }
-        return more;
-    }
-    ```
-    - View.applyLegacyAnimation就是Animation大显神通的舞台，其核心代码主要分三个部分
-        - 初始化Animation（仅初始化一次）
-            - 调用Animation.initialize(width, height, parentWidth, parentHeight)，通过View及ParentView的Size来解析Animation中的相关数据；
-            - 调用Animation.initializeInvalidateRegion(left, top, right, bottom)来设定动画的初始区域，并在fillBefore为true时计算Animation动画进度为0.0f的数据
-        - 调用getTransformation根据当前绘制事件生成Animation中对应帧的动画数据
-        - 根据动画数据设定重绘制区域
-            - 若仅为Alpha动画，此时动画区域为View的当前区域，且不会产生变化
-            - 若包含非Alpha动画，此时动画区域需要调用Animation.getInvalidateRegion进行计算，该函数会根据上述生成动画数据Thransformation中的Matrix进行计算，并与之前的动画区域执行unio操作，从而获取动画的完整区域
-            - 调用ViewGroup.invalidate(int l, int t, int r, int b)设定绘制区域
-- 当View.applyLegacyAnimation调用完成之后，View此次绘制的动画数据就构建完成，之后便回到View.draw(Canvas, ViewGroup, long)应用动画数据对视图进行绘制刷新，如下所示：
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-5f622fe2456db362.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-    - 重点看到Animation产生的动画数据实际并不是应用在View本身的，而是应用在RenderNode或者Canvas上的，这就是为什么Animation不会改变View的属性的根本所在。另一方面，我们知道Animation仅在View被绘制的时候才能发挥自己的价值，这也是为什么插间动画被放在Android.view包内。
+- 揭露动画（Reveal Effect）
+    - 揭露动画在系统中很常见，就是类似波纹的效果， 从某一个点向四周展开或者从四周向某一点聚合起来。
+- 视图状态动画（Animate View State Changes）
+    - View 在状态改变时执行的动画效果。和通过 selector 选择器给 Button 设置不同状态下的背景效果是一样一样的。
 
 
+### 03.各个动画使用场景
+#### 3.1 帧动画使用场景
+- 帧动画这个很好理解
+    - 其实就和看的动画片一样，每一帧代表一个画面动作，当快速逐帧显示时，速度到达人眼无法分辨每一帧时，就达到了动画的效果。
+- 还有几种特殊的使用场景：
+    - 第一种是设备的开关机动画；第二种是“复杂” 的动画效果，看似不可能完成的动画
+- 注意要点说明
+    - 常常使用到的是，当我们需要一些比较复杂的图片动画显示效果时，其他动画又实现不了，这时我们可以考虑帧动画，但要注意防止 OOM。
 
 
-
-### 3.Animator运行原理和源码分析
-#### 3.1 属性动画的基本属性
-- 属性动画跟补间动画一样会包含动画相关的属性，如动画时长、动画播放次数、延迟时间、插间器等等，为了后面分析动画运行流程时概念更加明确，这里仅仅写了部分ValueAnimator源码中的字段，并做了相应的注解
+#### 3.2 补间动画场景
+- 最常见是作用在View上
+    - View 一般会用作直接作用页面中的 View 上，实现基本的动画效果：平移、旋转、缩放、透明度、或前几者的交集：
+- 还有几种特殊的使用场景：
+    - 第一种：给 PopupWindow 设置显示隐藏的动画效果。或者给 Dialog 设置弹出动画效果。一般是设置style样式中添加xml动画
+    - 第二种：给 Activity 设置页面跳转、退出动画效果。借助设置 overridePendingTransition(int enterAnim, int exitAnim) 方法。跟在 startActivity() 或 finish() 后面，在页面转换时就显示上面方法设置的切换动画效果。
+    - 第三种：给 ViewGroup 设置子控件的进场动画效果。设置一条 android:layoutAnimation="@anim/anim_layout" 的属性
+    - 第四种：给 Activity 转场动画配置theme主题。设置windowAnimationStyle的动画样式
+- 举第一个例子给弹窗设置动画效果
     ```
-    // 初始化函数是否被调用 
-    boolean mInitialized = false; 
-    // 动画时长 
-    private long mDuration = (long)(300 * sDurationScale); 
-    private long mUnscaledDuration = 300; 
-    // 动画延时 
-    private long mStartDelay = 0; 
-    private long mUnscaledStartDelay = 0; 
-    // 动画重复模式及次数 
-    private int mRepeatCount = 0; 
-    private int mRepeatMode = RESTART; 
-    // 插间器
-    private TimeInterpolator mInterpolator = sDefaultInterpolator; 
-    // 动画开始运行的时间点 
-    long mStartTime; 
-    // 是否需要在掉帧的时候调整动画开始时间点 
-    boolean mStartTimeCommitted; 
-    // 动画是否反方向运行，当repeatMode=REVERSE是会每个动画周期反转一次 
-    private boolean mPlayingBackwards = false;
-    // 当前动画在一个动画周期中所处位置 
-    private float mCurrentFraction = 0f; 
-    // 动画是否延时 
-    private boolean mStartedDelay = false; 
-    // 动画完成延时的时间点 
-    private long mDelayStartTime; 
-    // 动画当前所处的状态：STOPPED, RUNNING, SEEKED 
-    int mPlayingState = STOPPED; 
-    // 动画是否被启动 
-    private boolean mStarted = false; 
-    // 动画是否被执行（以动画第一帧被计算为界） 
-    private boolean mRunning = false; 
-    
-    // 回调监听器 
-    // 确保AnimatorListener.onAnimationStart(Animator)仅被调用一次 
-    private boolean mStartListenersCalled = false; 
-    // start,end,cancel,repeat回调
-    ArrayList<AnimatorListener> mListeners = null; 
-    // pause, resume回调
-    ArrayList<AnimatorPauseListener> mPauseListeners = null;  
-    // value更新回调
-    ArrayList<AnimatorUpdateListener> mUpdateListeners = null; 
+    //第一步：调用弹窗中api设置视图动画属性
+    popupWindow.setAnimationStyle(R.style.pop_anim);
+    //第二步：做成一个 `style`, 在 `res/values/styles.xml` 文件里加上动画属性
+    <style name="pop_anim">
+        <item name="android:windowEnterAnimation">@anim/pop_in</item>
+        <item name="android:windowExitAnimation">@anim/pop_out</item>
+    </style>
     ```
-
-#### 3.2 属性动画新的概念
-- 属性动画相对于插间动画来件引入了一些新的概念
-    - 可以暂停和恢复、可以调整进度，这些概念的引入，让动画的概念更加饱满起来，让动画有了视频播放的概念，主要有：
+- 举第二个例子使用theme配置style动画样式。然后直接配置Activity的theme主题就OK
     ```
-    // 动画是否正在running
-    private boolean mRunning = false;
-    // 动画是否被开始
-    private boolean mStarted = false;
-    // 动画是否被暂停 
-    boolean mPaused = false; 
-    // 动画暂停时间点，用于在动画被恢复的时候调整mStartTime以确保动画能优雅地继续运行 
-    private long mPauseTime; 
-    // 动画是否从暂停中被恢复，用于表明动画可以调整mStartTime
-    private boolean mResumed = false; 
-    // 动画被设定的进度位置
-    float mSeekFraction = -1;
+    <style name="ActivityTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowAnimationStyle">@style/ActivityAnim</item>
+    </style>
+    <style name="ActivityAnim">
+        <item name="android:activityOpenEnterAnimation">@anim/activity_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/activity_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/activity_close_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/activity_close_out</item>
+    </style>
     ```
 
 
-#### 3.3 PropertyValuesHolder作用
-- PropertyValuesHolder是用来保存某个属性property对应的一组值，这些值对应了一个动画周期中的所有关键帧。
-    - 动画说到底是由动画帧组成的，将动画帧连续起来就成了动画呢。
-    - Animator可以设定并保存整个动画周期中的关键帧，然后根据这些关键帧计算出动画周期中任一时间点对应的动画帧的动画数据
-    - 而每一帧的动画数据里都包含了一个时间点属性fraction以及一个动画值mValue，从而实现根据当前的时间点计算当前的动画值，然后用这个动画值去更新property对应的属性
-    - **Animator被称为属性动画的原因，因为它的整个动画过程实际上就是不断计算并更新对象的属性**这个后面详细讲解。
-- 那么保存property使用什么存储的呢？看代码可知：数组
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-0114b7d8c02df548.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- PropertyValuesHolder由Property及Keyframes组成，其中Property用于描述属性的特征：如属性名以及属性类型，并提供set及get方法用于获取及设定给定Target的对应属性值；Keyframes由一组关键帧Keyframe组成，每一个关键帧由fraction及value来定量描述，于是Keyframes可以根据给定的fraction定位到两个关键帧，这两个关键帧的fraction组成的区间包含给定的fraction，然后根据定位到的两个关键帧以及设定插间器及求值器就可以计算出给定fraction对应的value。
-    - PropertyValuesHolder的整个工作流程
-        - 首先通过setObjectValues等函数来初始化关键帧组mKeyframes，必要的情况下（如ObjectAnimator）可以通过setStartValue及setEndValue来设定第一帧及最末帧的value，以上工作只是完成了PropertyValuesHolder的初始化，
-        - 之后就可以由Animator在绘制动画帧的时候通过fraction来调用calculateValue计算该fraction对应的value（实际上是由mKeyframes的getValue方法做出最终计算），获得对应的value之后，一方面可以通过getAnimatedValue提供给Animator使用，
-        - 另一方面也可以通过setAnimatedValue方法直接将该值设定到相应Target中去，这样PropertyValuesHolder的职责也就完成呢。
-
-
-#### 3.4 属性动画start执行流程
-- 首先看看start方法，默认是false，这个参数是干嘛的呢？这个参数是动画是否应该开始反向播放。
-    - 启动动画播放。这个版本的start()使用一个布尔标志，指示动画是否应该反向播放。该标志通常为false，但如果从反向()方法调用，则可以将其设置为true。通过调用此方法启动的动画将在调用此方法的线程上运行。这个线程应该有一个活套(如果不是这样的话，将抛出一个运行时异常)。另外，如果动画将动画化视图层次结构中对象的属性，那么调用线程应该是该视图层次结构的UI线程。
+#### 3.3 属性动画场景
+- 最常见的场景
+    - 基本上视图动画作用在 View 上的动画效果，属性动画都可以实现；
+- 其他的使用场景说明
+    - 在自定义 View 时，需要实现一些复杂的动画效果，或对 View 的一些特殊属性值进行动画变更时，视图动画无法实现时；
+    - 属性动画你也可以用在非动画场景，比如，你在自定义 View 需要一个有一定规律（根据特定差值器变化）且可监听的数值变化器，这个时候借助属性动画是再合适不过了。
+- 第一种使用XML属性动画方式
+    ``` xml
+    //Animator anim = AnimatorInflater.loadAnimator(this, R.animator.object_animator);
+    AnimatorSet anim = (AnimatorSet) AnimatorInflater.loadAnimator(myContext,R.animtor.set_animator);
+    anim.setTarget(myObject);
+    anim.start();
     ```
-    @Override
-    public void start() {
-        start(false);
-    }
-    
-    private void start(boolean playBackwards) {
-        if (Looper.myLooper() == null) {
-            throw new AndroidRuntimeException("Animators may only be run on Looper threads");
-        }
-        mReversing = playBackwards;
-        mSelfPulse = !mSuppressSelfPulseRequested;
-        if (playBackwards && mSeekFraction != -1 && mSeekFraction != 0) {
-            if (mRepeatCount == INFINITE) {
-                float fraction = (float) (mSeekFraction - Math.floor(mSeekFraction));
-                mSeekFraction = 1 - fraction;
-            } else {
-                mSeekFraction = 1 + mRepeatCount - mSeekFraction;
-            }
-        }
-        mStarted = true;
-        mPaused = false;
-        mRunning = false;
-        mAnimationEndRequested = false;
-        mLastFrameTime = -1;
-        mFirstFrameTime = -1;
-        mStartTime = -1;
-        addAnimationCallback(0);
-
-        if (mStartDelay == 0 || mSeekFraction >= 0 || mReversing) {
-            startAnimation();
-            if (mSeekFraction == -1) {
-                setCurrentPlayTime(0);
-            } else {
-                setCurrentFraction(mSeekFraction);
-            }
-        }
-    }
+- 第二种使用代码属性动画方式
+    ``` java
+    ObjectAnimator mAnimator = ObjectAnimator.ofFloat(view, type, start, end);
+    mAnimator.start();
     ```
-- 然后接着看addAnimationCallback(0)这行代码，从字面意思理解是添加动画回调callback
-    - 可以看到通过getAnimationHandler()创建了一个AnimationHandler对象。
-    - 然后在看看addAnimationFrameCallback()这个方法，看命名应该是专门处理动画相关的。实际上里面的逻辑大概是：通过Choreographer向底层注册下一个屏幕刷新信号监听，然后将需要运行的动画添加到列表中，如果延迟时间大于0，则说明动画是一个延迟开始的动画，那么加入Delay队列里。
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-611bcf80a93bfebf.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-c06fa6fa856fdf8d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-    - 然后看看动画是用什么存储的呢？mAnimationCallbacks是一个ArrayList，每一项保存的是 AnimationFrameCallback 接口的对象，看命名这是一个回调接口
-- AnimationHandler的作用主要是什么呢？
-    - 是一个定时任务处理器，根据Choreographer的脉冲周期性地完成指定的任务，由于它是一个线程安全的静态变量，因此运行在同一线程中的所有Animator共用一个定时任务处理器，这样的好处在于：一方面可以保证Animator中计算某一时刻动画帧是在同一线程中运行的，避免了多线程同步的问题；另一方面，该线程下所有动画共用一个处理器，可以让这些动画有效地进行同步，从而让动画效果更加优雅。
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-8481ef49cc8df2de.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- 然后在回到start(boolean playBackwards)方法中，查看startAnimation()源码。
-    - 内部调用，通过将动画添加到活动动画列表来启动动画。必须在UI线程上调用。
-    - 通过notifyStartListeners()这个方法，刷新动画listener，也就是通知动画开始呢。
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-a12162003f6d96c0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- 接着看initAnimation()初始化动画操作逻辑
-    - 在处理动画的第一个动画帧之前立即调用此函数。如果存在非零<code>startDelay</code>，则在延迟结束后调用该函数，它负责动画的最终初始化步骤。
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-fe2776e70e6a304b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+#### 3.4 过渡动画场景
+- 转场动画听名字就知道它的使用场景了，转场、转场自然是用在场景转换的时候：
+    - 转场效果我们一般用在 Activity 切换时的动画效果上；
+    - 共享元素一般我们使用在转换的前后两个页面有共同元素时；
+    - 同时也可以在 Activity 布局发生场景变化时，让其中的 View 产生相应的过渡动画。
+- 在介绍 activity 的切换动画之前我们先来说明一下实现切换 activity 的两种方式：
+    - 调用 startActivity 方法启动一个新的 Activity 并跳转其页面。这涉及到了旧的 Activity 的退出动画和新的 Activity 的显示动画。
+    - 调用 finish 方法销毁当前的 Activity 返回上一个 Activity 界面。这涉及到了当前 Activity 的退出动画和前一个 Activity 的显示动画。
+- Activity转场动画实现的几种方式
+    - 第一种：activity.overridePendingTransition(R.anim.fade_in, R.anim.fade_out)，这个是在startActivity 方法或者是 finish 方法调用之后立即执行。
+    - 第二种：使用 style 的方式定义 Activity 的切换动画。这里的 windowAnimationStyle 就是我们定义 Activity 切换动画的 style，设置这个动画文件则可以为Activity 的跳转配置动画效果。
+    - 第三种：使用 ActivityOptions 切换动画实现 Activity 跳转动画。Material Design转场动画，三种进入和退出过渡动画效果(Explode，Slide，Fade)，然后开启activity时传递ActivityOptions.makeSceneTransitionAnimation
+    - 第四种：使用 ActivityOptions 动画共享组件的方式实现跳转 Activity 动画。需要注意共享视图设置的transitionName保持一致
+    - 第五种：使用 ActivityOptions 之后内置的动画效果通过 style 的方式。
+    - 第六种：过渡模式，
+    - 关于转场动画，可以看看这篇博客：[Android动画系列---转场动画详解](https://www.jianshu.com/p/78fdcceb9a59)
 
 
 
-#### 3.5 属性动画cancel和end执行流程
-- **先看看cancel中的源码**
-    - 可以得知，cancel只会处理那些正在运行或者等待开始运行的动画，大概的处理逻辑是这样的：
-        - 调用AnimatorListener.onAnimationCancel
-        - 然后调用Animator.endAnimation
-            - 通过removeAnimationCallback()把该动画从AnimationHandler的所有列表中清除
-            - 调用AnimatorListener.onAnimationEnd
-            - 复位动画所有状态：如mPlayingState = STOPPED、mRunning=false、mReversing = false、mStarted = false等等
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-0a3d919f0c017543.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-91e9d43f64aa5d8b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- **再看看end中的源码**
-    - end相对于cancel来说有两个区别：一个是会处理所有动画；另一个是会计算最末一帧动画值。其具体的处理逻辑如下所示：
-        - 若动画尚未开始：调用Animatior.startAnimation让动画处于正常运行状态
-        - 计算最后一帧动画的动画值：animateValue(mPlayingBackwards ? 0f : 1f)
-        - 结束动画就调用endAnimation这个方法，上面已经分析了该方法的作用
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-5cb0bbba1ac1a1a3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+#### 3.5 其他动画场景
+- 触摸反馈动画（Ripple Effect）
+    - 所谓触摸反馈动画就是一种点击效果，作用在可点击的 View 上时，当有点击事件时会有涟漪般的反馈效果，使用在 按钮 上是再好不过了。
+- 揭露动画（Reveal Effect）
+    - 可以用在 Activity 里面的 View 动画效果，用来揭露某个隐藏 View 的显示；也可以使用在 Activity 跳转过渡动画中。
+- 视图状态动画（Animate View State Changes）
+    - 当 View 的状态改变时，希望此时显示的效果和静态效果有所区分，即显示效果也做出相应的改变，比如 Z 轴抬高，大小改变、或其他动画效果等。
+
+
+### 04.动画的设计思想
+#### 4.1 逐帧动画思想
+
+
+#### 4.2 补间动画思想
+
+
+#### 4.3 属性动画思想
+
+
+#### 4.4 过渡动画思想
 
 
 
-#### 3.6 属性动画pase和resume执行流程
-- **先看看pause方法中的源码**
-    - 先看在Animator中的pause方法，然后看ValueAnimator中的pause方法可知：
-    - 仅仅在动画已开始（isStarted()==true）且当前为非暂停状态时才进行以下处理
-        - 置位：mPaused = true
-        - 循环遍历调用AnimatorPauseListener.onAnimationPause
-        - 清空暂停时间：mPauseTime = -1
-        - 复位mResumed = false
-    ```
-    //在ValueAnimator中
-    public void pause() {
-        boolean previouslyPaused = mPaused;
-        super.pause();
-        if (!previouslyPaused && mPaused) {
-            mPauseTime = -1;
-            mResumed = false;
-        }
-    }
-    
-    //在Animator中
-    public void pause() {
-        if (isStarted() && !mPaused) {
-            mPaused = true;
-            if (mPauseListeners != null) {
-                ArrayList<AnimatorPauseListener> tmpListeners =
-                        (ArrayList<AnimatorPauseListener>) mPauseListeners.clone();
-                int numListeners = tmpListeners.size();
-                for (int i = 0; i < numListeners; ++i) {
-                    tmpListeners.get(i).onAnimationPause(this);
-                }
-            }
-        }
-    }
-    ```
-    - 做完这些处理之后，等下一帧动画的到来，当doAnimationFrame被调用，此时若仍然处于暂停状态，就会做如下截击
-        - 这样就阻止了动画的正常运行，并记录下来动画暂停的时间，确保恢复之后能让动画调整到暂停之前的动画点正常运行，具体怎么起作用就要看resume的作用。
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-3bffba42cdadef07.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- **先看看resume方法中的源码**
-    - 先看在ValueAnimator中的resume方法，然后看Animator中的resume方法可知：
-        - 置位：mResumed = true
-        - 复位：mPaused = false
-        - 调用AnimatorPauseListener.onAnimationResume
-    ```
-    //在ValueAnimator中
-    @Override
-    public void resume() {
-        if (Looper.myLooper() == null) {
-            throw new AndroidRuntimeException("Animators may only be resumed from the same " +
-                    "thread that the animator was started on");
-        }
-        if (mPaused && !mResumed) {
-            mResumed = true;
-            if (mPauseTime > 0) {
-                addAnimationCallback(0);
-            }
-        }
-        super.resume();
-    }
-    
-    //在Animator中
-    public void resume() {
-        if (mPaused) {
-            mPaused = false;
-            if (mPauseListeners != null) {
-                ArrayList<AnimatorPauseListener> tmpListeners =
-                        (ArrayList<AnimatorPauseListener>) mPauseListeners.clone();
-                int numListeners = tmpListeners.size();
-                for (int i = 0; i < numListeners; ++i) {
-                    tmpListeners.get(i).onAnimationResume(this);
-                }
-            }
-        }
-    }
-    ```
-    - 当doAnimationFrame被调用，此时若处于恢复状态（mResume==true），就会做如下补偿处理
-        - 这样就让暂停的时间从动画的运行过程中消除
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-1b43530b23fa712b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+### 05.动画的原理分析
+#### 5.1 逐帧动画原理
 
 
 
-#### 3.7 属性动画与View结合
-- 属性动画如何去实现View的变换？
-    - 是根据计算出来的动画值去修改View的属性，如alpha、x、y、scaleX、scaleY、translationX、translationY等等，这样当View重绘时就会产生作用，随着View连续不断地被重绘，就会产生绚烂多彩的动画。
-- 接着看setTarget这个方法源码
-    - 如果是使用ValueAnimator类，那么直接通过mAnimator.setTarget(view)设置view
-    - 如果是使用ObjectAnimator，那么直接通过ObjectAnimator.ofFloat(view, type, start, end)设置view，最终还是会调用setTarget方法。注意ObjectAnimator实现了ValueAnimator类
-    - ObjectAnimator是可以在动画帧计算完成之后直接对Target属性进行修改的属性动画类型，相对于ValueAnimator来说更加省心省力
+#### 5.2 补间动画原理
+- 先了解一下View绘制的步骤
+    - 要了解Android动画是如何加载出来的，首先要了解Android View 是如何组织在一起的。每个窗口是一颗View树，RootView是DecorView，在布局文件中声明的布局都是DecorView的子View是通过setContentView来设置进入窗口内容的。
+    - 因为View的布局就是一棵树，所以绘制的时候也是按照树形结构来遍历每个View进行绘制，ViewRoot.java中 draw函数准备好Canvas后 调用 mView.draw(canvas)，这里的mView是DecorView。
+- **下面看一下View递归绘制的几个步骤:**
+    - 1.绘制背景
+    - 2.如果需要,保存画布(canvas),为淡入淡出做准备
+    - 3.通过调用View.onDraw(canvas)绘制View本身的内容
+    - 4.通过 dispatchDraw(canvas)绘制自己的孩子,dispatchDraw->drawChild->child.draw(canvas) 这样的调用过程被用来保证每个子 View 的 draw 函数都被调用
+    - 5.如果需要，绘制淡入淡出相关的内容并恢复保存的画布所在的层（layer）
+    - 6.绘制修饰的内容（例如滚动条）
+- 当一个 ChildView 要重画时
+    - 它会调用其成员函数 invalidate() 函数将通知其 ParentView 这个 ChildView 要重画，这个过程一直向上遍历到 ViewRoot，当 ViewRoot 收到这个通知后就会调用上面提到的 ViewRoot 中的 draw 函数从而完成绘制。
+    - Android 动画就是通过 ParentView 来不断调整 ChildView 的画布坐标系来实现的。
+- 这个时候再来看补间动画原理
+    - 待完善
+
+
+
+#### 5.3 属性动画原理
+- 属性动画原理官方介绍
+    - [参看Android官方文档](https://developer.android.com/guide/topics/graphics/prop-animation.html)
+- 属性动画常见类描述
+    - 平时使用属性动画的重点就在于 AnimatorSet、ObjectAnimator、TimeAnimator、ValueAnimator。
+    | java 类名 | xml 关键字 | 描述信息 |
+    | :-------: | :------- | :----- |
+    | ValueAnimator | `<animator>` 放置在 res/animator/ 目录下 | 在一个特定的时间里执行一个动画 | 
+    | TimeAnimator | 不支持/点我查看原因 | 时序监听回调工具 | 
+    | ObjectAnimator | `<objectAnimator>` 放置在 res/animator/ 目录下 | 一个对象的一个属性动画 | 
+    | AnimatorSet | `<set>` 放置在 res/animator/ 目录下 | 动画集合 | 
 - 相比ValueAnimator类，ObjectAnimator还做了许多操作，ObjectAnimator与 ValueAnimator类的区别： 
     - ValueAnimator 类是先改变值，然后 手动赋值 给对象的属性从而实现动画；是 间接 对对象属性进行操作；
     - ObjectAnimator 类是先改变值，然后 自动赋值 给对象的属性从而实现动画；是 直接 对对象属性进行操作；
-- 个人感觉属性动画源码分析十分具有跳跃性。不过还好没有关系，只需要理解其大概运作原理就可以呢。
+
+
+
+##### 5.3.1 ObjectAnimator
+- ObjectAnimator是什么
+    - 继承自 ValueAnimator，允许你指定要进行动画的对象以及该对象的一个属性。该类会根据计算得到的新值自动更新属性。
+- ObjectAnimator如何使用
+    - ObjectAnimator 类提供了 ofInt、ofFloat、ofObject 这个三个常用的方法，这些方法都是设置动画作用的元素、属性、开始、结束等任意属性值。 
+    - 当属性值（上面方法的参数）只设置一个时就把通过getXXX反射获取的值作为起点，设置的值作为终点；如果设置两个（参数）， 那么一个是开始、另一个是结束。
+- ObjectAnimator代码案例
+    ``` java
+    ObjectAnimator translation = ObjectAnimator.ofFloat(imageView, "translationX", 300, 200, 100);
+    ObjectAnimator rotate = ObjectAnimator.ofFloat(imageView, "rotation", 0f, 360f);
+    ObjectAnimator alpha = ObjectAnimator.ofFloat(imageView, "alpha", 1f, 0f, 1f);
+    ```
+- ObjectAnimator的注意事项
+    - ObjectAnimator 的动画原理是不停的调用 setXXX 方法更新属性值，所有使用 ObjectAnimator 更新属性时的前提是 Object 必须声明有getXXX和setXXX方法。 
+    - 我们通常使用 ObjectAnimator 设置 View 已知的属性来生成动画，而一般 View 已知属性变化时都会主动触发重绘图操作， 所以动画会自动实现；
+    - 但是也有特殊情况，譬如作用 Object 不是 View，或者作用的属性没有触发重绘，或者我们在重绘时需要做自己的操作，添加动画监听然后在onAnimationUpdate中做具体逻辑。
+
+
+
+
+##### 5.3.2 ValueAnimator
+- ValueAnimator是什么
+    - 属性动画中的时间驱动，管理着动画时间的开始、结束属性值，相应时间属性值计算方法等。包含所有计算动画值的核心函数以及每一个动画时间节点上的信息、一个动画是否重复、是否监听更新事件等，并且还可以设置自定义的计算类型。
+- ValueAnimator注意点
+    - ValueAnimator 只是动画计算管理驱动，设置了作用目标，但没有设置属性，需要通过 updateListener 里设置属性才会生效。
+- ValueAnimator代码案例
+    ``` java
+    ValueAnimator animator = ValueAnimator.ofFloat(0, mContentHeight);  //定义动画
+    animator.setTarget(view);   //设置作用目标
+    animator.setDuration(5000).start();
+    animator.addUpdateListener(new AnimatorUpdateListener() {
+        @Override
+        public void onAnimationUpdate(ValueAnimator animation){
+            float value = (float) animation.getAnimatedValue();
+            view.setXXX(value);  //必须通过这里设置属性值才有效
+            view.mXXX = value;  //不需要setXXX属性方法
+        }
+    });
+    ```
+
+
+##### 5.3.3 ViewPropertyAnimator
+- 为何会有ViewPropertyAnimator？
+    - 之前我们要设置一个View控件旋转 360 的代码是这样：ObjectAnimator.ofFloat(btn,"rotation",360).setDuration(200).start();
+    - 而现在我们使用 ViewPropertyAnimator 后是这样：btn.animate().rotation(360).setDuration(200);
+- 如何使用ViewPropertyAnimator
+    - 用 View#animate() 方法来获取一个 ViewPropertyAnimator 的对象实例，支持链式操作。
+    - 可以看见通过 View 的 animate() 方法可以得到一个 ViewPropertyAnimator 的属性动画（有人说他没有继承 Animator 类，是的，他是成员关系，不是之前那种继承关系）。
+- ViewPropertyAnimator复杂属性动画使用简洁性
+    ``` java
+    AnimatorSet set = new AnimatorSet();
+    set.playTogether( ObjectAnimator.ofFloat(btn,"alpha",0.5f),
+            ObjectAnimator.ofFloat(btn,"rotation",360),
+            ObjectAnimator.ofFloat(btn,"scaleX",1.5f),
+            ObjectAnimator.ofFloat(btn,"scaleY",1.5f),
+            ObjectAnimator.ofFloat(btn,"translationX",0,50),
+            ObjectAnimator.ofFloat(btn,"translationY",0,50)
+    );
+    set.setDuration(5000).start();
+    
+    //使用 ViewPropertyAnimator 设置代码如下：
+    btn.animate().alpha(0.5f).rotation(360).scaleX(1.5f).scaleY(1.5f)
+                 .translationX(50).translationY(50).setDuration(5000);
+    ```
+
+
+
+
+
+#### 5.4 过渡动画原理
+##### 5.4.1 overridePendingTransition原理
+
+
+
+##### 5.4.2 windowAnimationStyle原理
+
+
+
+##### 5.4.3 Transition库原理
+
+
+
+
+
+
+
+
+
+
 
 
 
 # 参考博客
 - https://github.com/OCNYang/Android-Animation-Set
-
+- Material Components—预备役选手Transition
+    - https://mp.weixin.qq.com/s/I7rUg8z539P8OaQEfpmQgA
+- 带你走一波Transition Animator转场动画相关事项
+    - https://juejin.cn/post/6844904032033603591
 
 
 
