--- a/Read/ReadShareWiki/00.心怡宝贝/08.心怡的业余爱好.md
+++ b/Read/ReadShareWiki/00.心怡宝贝/08.心怡的业余爱好.md
@@ -1,6 +1,7 @@
 #### 目录介绍
 - 01.喜欢种植盆景
 - 02.喜欢唱歌
+- 03.衣着打扮
 
 
 
@@ -14,8 +15,9 @@
 - 以前工作的时候，喜欢在家里唱歌，然后现在多个老师合租在一起害怕打扰别人
 
 
-
-
+### 03.衣着打扮
+- 做老师，穿的衣服比较中规中矩，很整齐干净。
+- 鞋子，37码大小
 
 
 
